--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="GDIPlusManager.h" />
     <ClInclude Include="Graphics.h" />
     <ClInclude Include="IndexedLineList.hpp" />
+    <ClInclude Include="IndexedTriangleList.hpp" />
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="MainWindow.h" />
     <ClInclude Include="Mat2.h" />
