--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="Primitives.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IndexedTriangleList.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DXErr.cpp">
